--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -28,4 +28,6 @@ $laptop: 1210px;
 $desktop: 1390px;
 $animation-time: 0.2s;
 $timing-function: ease-in;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
 
