--- a/source/sass/block/master-class.scss
+++ b/source/sass/block/master-class.scss
@@ -32,10 +32,10 @@
   position: absolute;
   right: 10px;
   top: 10px;
+  padding-top: 17px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   width: 60px;
   height: 60px;
   background-color: $white-color;
