Добавляет стилизацию блока best-curse

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -75,3 +75,5 @@
 @import "block/h1";
 @import "block/master-classes";
 @import "block/master-class";
+@import "block/best-organization";
+@import "block/best-curse";
