--- a/source/sass/block/master-class.scss
+++ b/source/sass/block/master-class.scss
@@ -3,6 +3,7 @@
   display: block;
   padding: 75px 20px 20px 20px;
   text-decoration: none;
+  background-color: $black-clear-color;
   z-index: 1;
   box-shadow: 0 3px 6px rgba($black-clear-color, 0.16);
 
