Добавляет стилизацию 320, блоку Featured Article

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -77,3 +77,4 @@
 @import "block/master-class";
 @import "block/best-organization";
 @import "block/best-curse";
+@import "block/featured-articles";
