--- a/source/sass/block/best-curse.scss
+++ b/source/sass/block/best-curse.scss
@@ -5,7 +5,9 @@
   color: $white-color;
   text-decoration: none;
   background-color: $black-clear-color;
+  border-radius: 3px;
   z-index: 1;
+  overflow: hidden;
 
   &::after {
     content: " ";
@@ -47,7 +49,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 3px;
   z-index: -1;
 }
 
