--- a/source/sass/block/master-class.scss
+++ b/source/sass/block/master-class.scss
@@ -5,7 +5,9 @@
   text-decoration: none;
   background-color: $black-clear-color;
   z-index: 1;
+  border-radius: 3px;
   box-shadow: 0 3px 6px rgba($black-clear-color, 0.16);
+  overflow: hidden;
 
   &::after {
     content: " ";
