Добавляет адаптив до 768

--- a/source/sass/block/best-curse.scss
+++ b/source/sass/block/best-curse.scss
@@ -91,3 +91,9 @@
   font-weight: 500;
   line-height: 21px;
 }
+
+@media (min-width: $iphone-breakpoint) {
+  .best-curse {
+    padding-top: 234px;
+  }
+}
