--- a/source/sass/block/article.scss
+++ b/source/sass/block/article.scss
@@ -43,5 +43,20 @@
 
 .article__img img {
   display: block;
+  width: 100%;
   border-radius: 3px;
+}
+
+@media (min-width: $iphone-breakpoint) {
+  .article__name {
+    padding-right: 14px;
+  }
+
+  .article__time {
+    margin-top: 32px;
+  }
+
+  .article__info-block {
+    padding-bottom: 28px;
+  }
 }
