Добавляет адаптив от 768 до 992

--- a/source/sass/block/article.scss
+++ b/source/sass/block/article.scss
@@ -1,8 +1,14 @@
 .article {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
   box-shadow: 0 3px 6px rgba($black-clear-color, 0.16);
 }
 
 .article__info-block {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   padding: 22px 20px 18px 20px;
 }
 
@@ -23,6 +29,7 @@
 }
 
 .article__text {
+  flex-grow: 1;
   margin-top: 22px;
   margin-bottom: 0;
   font-size: 16px;
