--- a/source/sass/block/seo-text.scss
+++ b/source/sass/block/seo-text.scss
@@ -60,3 +60,10 @@
   margin-top: 62px;
   margin-bottom: 58px;
 }
+
+@media (min-width: $tablet) {
+  .seo-text--main-page {
+    margin-top: 94px;
+    margin-bottom: 100px;
+  }
+}
