--- a/source/sass/block/best-curse.scss
+++ b/source/sass/block/best-curse.scss
@@ -1,6 +1,8 @@
 .best-curse {
   position: relative;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   padding: 179px 20px 21px 20px;
   color: $white-color;
   text-decoration: none;
@@ -19,6 +21,12 @@
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.46) 100%);
     z-index: -1;
   }
+}
+
+.best-curse__info-block {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .best-curse__list-star {
@@ -86,6 +94,7 @@
 }
 
 .best-curse__name {
+  flex-grow: 1;
   margin: 0;
   font-size: 16px;
   font-weight: 500;
