--- a/source/sass/block/best-organization.scss
+++ b/source/sass/block/best-organization.scss
@@ -14,6 +14,8 @@
 }
 
 .best-organization__item {
+  display: flex;
+  flex-direction: column;
   margin-top: 30px;
 
   &:nth-child(1) {
@@ -27,4 +29,29 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 11px;
+}
+
+@media (min-width: $tablet) {
+  .best-organization__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+  }
+
+  .best-organization__item {
+    width: 50%;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    &:nth-child(2) {
+      margin-top: 0;
+    }
+  }
+  .best-organization__watch-more {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 268px;
+  }
+  //.best-organization__watch-more
 }
