--- a/source/sass/block/featured-articles.scss
+++ b/source/sass/block/featured-articles.scss
@@ -14,6 +14,8 @@
 }
 
 .featured-articles__item {
+  display: flex;
+  flex-direction: column;
   margin-top: 30px;
 }
 
@@ -28,5 +30,31 @@
 @media (min-width: $iphone-breakpoint) {
   .featured-articles__show-more {
     margin-top: 29px;
+  }
+}
+
+@media (min-width: $tablet) {
+  .featured-articles__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+  }
+
+  .featured-articles__item {
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 50%;
+
+    &:nth-child(1),
+    &:nth-child(2) {
+      margin-top: 0;
+    }
+  }
+
+  .featured-articles__show-more {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 268px;
   }
 }
