--- a/source/sass/block/master-classes.scss
+++ b/source/sass/block/master-classes.scss
@@ -9,6 +9,8 @@
 }
 
 .master-classes__item {
+  display: flex;
+  flex-direction: column;
   margin-top: 28px;
 
   &:nth-child(1) {
@@ -27,4 +29,26 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 11px;
+}
+
+@media (min-width: $tablet) {
+  .master-classes__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+  }
+
+  .master-classes__item {
+    width: 50%;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    &:nth-child(2) {
+      margin-top: 0;
+    }
+  }
+
+  .master-classes__title br {
+    display: none;
+  }
 }
