--- a/source/sass/block/proposition.scss
+++ b/source/sass/block/proposition.scss
@@ -65,3 +65,28 @@
     margin-top: 59px;
   }
 }
+
+@media (min-width: $tablet) {
+  .proposition__inner {
+    display: flex;
+    align-items: center;
+  }
+
+  .proposition__img {
+    max-width: 365px;
+    width: 100%;
+  }
+
+  .proposition__info-block {
+    margin-top: 0;
+    max-width: 364px;
+    padding-left: 30px;
+  }
+
+  .proposition__show-more {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 268px;
+  }
+}
