--- a/source/sass/block/best-organization.scss
+++ b/source/sass/block/best-organization.scss
@@ -47,11 +47,25 @@
       margin-top: 0;
     }
   }
+
   .best-organization__watch-more {
     display: block;
     margin-left: auto;
     margin-right: auto;
     max-width: 268px;
   }
-  //.best-organization__watch-more
+}
+
+@media (min-width: $tablet-large) {
+  .best-organization__item {
+    width: 33.33%;
+
+    &:nth-child(3) {
+      margin-top: 0;
+    }
+  }
+
+  .best-organization__title {
+    margin-bottom: 60px;
+  }
 }
