--- a/source/sass/block/featured-articles.scss
+++ b/source/sass/block/featured-articles.scss
@@ -58,3 +58,13 @@
     max-width: 268px;
   }
 }
+
+@media (min-width: $tablet-large) {
+  .featured-articles {
+    margin-top: 112px;
+  }
+
+  .featured-articles__title {
+    margin-bottom: 59px;
+  }
+}
