--- a/source/sass/block/master-class.scss
+++ b/source/sass/block/master-class.scss
@@ -98,11 +98,9 @@
   }
 }
 
-@media (min-width: $tablet) {
-  .master-classes__watch-more {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 268px;
+@media (min-width: $tablet-large) {
+  .master-class__time {
+    right: 20px;
+    top: 21px;
   }
 }
