--- a/source/sass/block/master-classes.scss
+++ b/source/sass/block/master-classes.scss
@@ -51,4 +51,17 @@
   .master-classes__title br {
     display: none;
   }
+
+  .master-classes__watch-more {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 268px;
+  }
+}
+
+@media (min-width: $tablet-large) {
+  .master-classes__title {
+    margin-bottom: 56px;
+  }
 }
