--- a/source/sass/block/article.scss
+++ b/source/sass/block/article.scss
@@ -88,4 +88,24 @@
   .article__time {
     margin-top: 34px;
   }
+
+  .article__name a {
+    &:hover {
+      color: rgba($black-color, 0.6);
+    }
+
+    &:focus {
+      color: rgba($black-color, 0.3);
+    }
+  }
+}
+
+@media (min-width: $desktop) {
+  .article__time {
+    margin-top: 27px;
+  }
+
+  .article__info-block {
+    padding-bottom: 20px;
+  }
 }
