--- a/source/sass/block/promo.scss
+++ b/source/sass/block/promo.scss
@@ -98,3 +98,13 @@
     max-width: 986px;
   }
 }
+
+@media (min-width: $desktop) {
+  .promo {
+    background-image: url("../img/promo-desktop@1x.jpg");
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/promo-desktop@2x.jpg");
+    }
+  }
+}
