--- a/source/sass/block/best-curse.scss
+++ b/source/sass/block/best-curse.scss
@@ -21,6 +21,12 @@
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.46) 100%);
     z-index: -1;
   }
+
+  &:focus {
+    &::after {
+      background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
+    }
+  }
 }
 
 .best-curse__info-block {
@@ -116,6 +122,18 @@
 @media (min-width: $laptop) {
   .best-curse {
     padding-top: 169px;
+
+    &:hover {
+      &::after {
+        background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
+      }
+    }
+
+    &:focus {
+      &::after {
+        background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 100%);
+      }
+    }
   }
 }
 
