--- a/source/sass/block/master-class.scss
+++ b/source/sass/block/master-class.scss
@@ -21,6 +21,13 @@
     background-image: linear-gradient(180deg, rgba($black-clear-color, 0) 0%, rgba($black-clear-color, 0.46) 100%);
     z-index: -1;
   }
+
+  &:focus {
+    &::after {
+      content: " ";
+      background-image: linear-gradient(180deg, rgba($black-clear-color, 0) 0%, rgba($black-clear-color, 0.9) 100%);
+    }
+  }
 }
 
 .master-classes__img {
@@ -108,6 +115,20 @@
 @media (min-width: $laptop) {
   .master-class {
     padding-top: 127px;
+  }
+
+  .master-class:hover {
+    &::after {
+      content: " ";
+      background-image: linear-gradient(180deg, rgba($black-clear-color, 0) 0%, rgba($black-clear-color, 0.9) 100%);
+    }
+  }
+
+  .master-class:focus {
+    &::after {
+      content: " ";
+      background-image: linear-gradient(180deg, rgba($black-clear-color, 0) 0%, rgba($black-clear-color, 0.9) 100%);
+    }
   }
 }
 
