--- a/source/sass/block/button.scss
+++ b/source/sass/block/button.scss
@@ -1,4 +1,5 @@
 .button {
+  position: relative;
   display: inline-block;
   padding: 13px 61px 12px 61px;
   text-align: center;
@@ -215,6 +216,37 @@
   }
 }
 
+.button--gray {
+  color: $gray-lite-color;
+  background-color: $gray-standard-color;
+  border-color: $gray-standard-color;
+
+  &:focus {
+    color: $gray-lite-color;
+    box-shadow: 0 0 0 0.2rem rgba($gray-hover-color, 0.25);
+  }
+}
+
+.button--icon-transform-svg {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  padding: 0 0 0 43px;
+  overflow: hidden;
+
+  &::before,
+  &::after {
+    display: none;
+  }
+}
+
+.button--icon-transform-svg svg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @media (min-width: $tablet) {
   .button--save {
     padding: 11px 20px 11px 50px;
@@ -225,6 +257,7 @@
     top: 9px;
   }
 
+  .button--icon-transform-svg,
   .button--icon-transform {
     width: auto;
     overflow: initial;
@@ -248,6 +281,12 @@
       min-width: auto;
       margin-bottom: 0;
     }
+  }
+
+  .button--icon-transform-svg svg {
+    top: 11px;
+    left: 20px;
+    transform: none;
   }
 }
 
@@ -311,6 +350,17 @@
     &:focus {
       color: rgba($black-color, 1);
       border-color: $violet-dark-color;
+    }
+  }
+
+  .button--gray {
+    &:hover {
+      color: rgba($gray-lite-color, 0.6);
+    }
+
+    &:focus {
+      color: $gray-lite-color;
+      box-shadow: 0 0 0 0.2rem rgba($gray-hover-color, 0.25);
     }
   }
 }
