--- a/source/sass/block/delete.scss
+++ b/source/sass/block/delete.scss
@@ -35,6 +35,34 @@
   fill: $gray-lite-color;
 }
 
+.delete--view-square {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 31px;
+  height: 31px;
+  background-color: $red-light;
+  border-radius: 3px;
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.2rem rgba($red-color, 0.25);
+
+    &::after {
+      display: none;
+    }
+
+    svg {
+      fill: $red-color;
+    }
+  }
+}
+
+.delete--view-square svg {
+  fill: $red-color;
+}
+
 @media (min-width: $laptop) {
   .delete {
     &:hover {
@@ -60,6 +88,33 @@
 
       svg {
         fill: $black-color;
+      }
+    }
+  }
+
+  .delete--view-square {
+
+    &:hover {
+      &::before,
+      &::after {
+       display: none;
+      }
+
+      svg {
+        fill: rgba($red-color, 0.6);
+      }
+    }
+
+    &:focus {
+      outline: none;
+
+      &::before,
+      &::after {
+        display: none;
+      }
+
+      svg {
+        fill: $red-color;
       }
     }
   }
