--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -81,3 +81,5 @@
 @import "block/article";
 @import "block/proposition";
 @import "block/seo-text";
+@import "block/action-circle";
+@import "block/deals";
