Добавляет редактирования сделки

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -83,3 +83,8 @@
 @import "block/seo-text";
 @import "block/action-circle";
 @import "block/deals";
+@import "block/deals-edit";
+@import "block/fixed-button-wrapper";
+@import "block/tag-select";
+@import "block/underline-select";
+@import "block/comment";
