--- a/source/sass/block/button.scss
+++ b/source/sass/block/button.scss
@@ -126,6 +126,7 @@
   }
 
   svg {
+    fill: $red-color;
     color: $red-color;
   }
 }
@@ -245,6 +246,50 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.button--with-icon {
+  padding-left: 43px;
+  padding-right: 20px;
+}
+
+.button--with-icon svg {
+  position: absolute;
+  left: 13px;
+  top: 10px;
+  width: 20px;
+  height: 21px;
+}
+
+.button--circle {
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0;
+  border-radius: 50%;
+  background-color: transparent;
+  border: none;
+
+  &:focus {
+    box-shadow: none;
+    background-color: $gray-standard-color;
+  }
+}
+
+.button--circle span {
+  display: block;
+  margin-top: 3px;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: $gray-lite-color;
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 @media (min-width: $tablet) {
