--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -38,6 +38,10 @@ form {
   margin: 0;
 }
 
+button {
+  cursor: pointer;
+}
+
 /* clears the 'X' from Internet Explorer */
 input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
 input[type=search]::-ms-reveal {  display: none; width : 0; height: 0; }
