Добавляет рейтинг и тултип

--- a/source/sass/block/reviews.scss
+++ b/source/sass/block/reviews.scss
@@ -8,6 +8,10 @@
   flex-wrap: wrap;
 }
 
+.reviews__info__rating-user {
+  margin-bottom: 30px;
+}
+
 .reviews__count {
   margin: 0;
   font-size: 28px;
