--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -88,3 +88,6 @@
 @import "block/tag-select";
 @import "block/underline-select";
 @import "block/comment";
+@import "block/not-registration-favorites";
+@import "block/rating-user";
+@import "block/tooltip";
