Добавляет страницу аналитика

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -91,3 +91,6 @@
 @import "block/not-registration-favorites";
 @import "block/rating-user";
 @import "block/tooltip";
+@import "block/table-cabinet";
+@import "block/analytic-card";
+@import "block/analytics";
