--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -94,3 +94,6 @@
 @import "block/table-cabinet";
 @import "block/analytic-card";
 @import "block/analytics";
+@import "block/all-articles";
+@import "block/articles";
+@import "block/top-articles";
