--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -96,4 +96,6 @@
 @import "block/analytics";
 @import "block/all-articles";
 @import "block/articles";
+@import "block/details-article";
 @import "block/top-articles";
+@import "block/article-page";
