Добавляет текстовую страницу

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -99,3 +99,5 @@
 @import "block/details-article";
 @import "block/top-articles";
 @import "block/article-page";
+@import "block/info-site";
+@import "block/text";
