Добавляет страницу о проекте

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,4 +1,4 @@
-$base-font-family: "Roboto";
+$base-font-family: "Roboto", arial, sans-serif;
 $base-font-size: 14px;
 $base-line-height: 19px;
 $black-clear-color: #000000;
