--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "global/normalize";
 @import "../libs/slick/slick.scss";
+@import "../libs/nouslider/nouislider";
 @import "global/fonts.scss";
 @import "global/variables";
 @import "global/mixin";
