--- a/source/sass/block/filter.scss
+++ b/source/sass/block/filter.scss
@@ -137,6 +137,16 @@
   display: none;
 }
 
+.filter__item--date .input {
+  margin-bottom: 20px;
+  max-width: 187px;
+  width: 100%;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
 @media (max-width: 1209px) {
   .filter__inner {
     position: fixed;
