--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -105,3 +105,5 @@
 @import "block/contacts-page";
 @import "block/services-page";
 @import "block/about-project";
+@import "block/instruction";
+@import "block/instruction-details";
