--- a/source/sass/block/product.scss
+++ b/source/sass/block/product.scss
@@ -4,6 +4,10 @@
   flex-grow: 1;
 }
 
+.product__img {
+  background-color: $gray-standard-color;
+}
+
 .product__img, .product-school__img {
   position: relative;
   display: block;
@@ -70,7 +74,6 @@
 }
 
 .product__features li {
-  margin-bottom: 9px;
   font-size: 16px;
 
   &:last-child {
@@ -166,6 +169,26 @@
   width: 100%;
 }
 
+.product__img img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.product__picture {
+  position: relative;
+  display: flex;
+  height: 250px;
+}
+
+.product__img {
+  display: flex;
+  flex-grow: 1;
+}
+
 @media (min-width: $tablet) {
   .product__info-block, .product-school__info-block {
     flex-grow: 1;
@@ -190,6 +213,23 @@
 
   .product__rating {
     left: 25px;
+  }
+
+  .product__img {
+    justify-content: center;
+    text-align: center;
+  }
+
+  .product__img img {
+    position: static;
+    max-height: 140px;
+    object-fit: contain;
+    height: auto;
+    max-width: 100%;
+  }
+
+  .product__picture {
+    height: auto;
   }
 }
 
