--- a/source/sass/block/tag.scss
+++ b/source/sass/block/tag.scss
@@ -40,6 +40,7 @@
   padding-left: 20px;
   padding-right: 20px;
   color: $red-color;
+  text-decoration: none;
   border-color: $red-color;
 
   &::before,
