--- a/source/sass/block/catalog.scss
+++ b/source/sass/block/catalog.scss
@@ -156,6 +156,15 @@
   margin-top: 60px;
 }
 
+.catalog__list--vertical .product__img {
+  width: 100%;
+  height: 100%;
+}
+
+.catalog__list--vertical .product__picture {
+  height: auto;
+}
+
 @media (max-width: 767px) {
   .catalog__sorting .sorting {
     position: fixed;
