--- a/source/sass/block/categories.scss
+++ b/source/sass/block/categories.scss
@@ -75,6 +75,7 @@
   }
 
   .categories__item {
+    display: flex;
     width: 50%;
     padding-left: 15px;
     padding-right: 15px;
@@ -82,6 +83,10 @@
     &:nth-child(2) {
       margin-top: 0;
     }
+  }
+
+  .categories__link {
+    width: 100%;
   }
 }
 
